# schnell

./: .gitignore  Cargo.toml  LICENCE  README.md  dist-workspace.toml
crates/asc_client/: Cargo.toml
crates/asc_client/src/: client.rs  lib.rs
crates/asc_client/src/bundle_identifer/: check_id.rs  error_mapping.rs  mod.rs  models.rs
crates/asc_client/src/certificates/: mod.rs
crates/asc_client/src/login/: login.rs  models.rs
crates/asc_client/src/provisioning_profiles/: api.rs  mapping.rs  mod.rs  payload.rs
crates/asc_client/tests/: list_profiles_via_bundle_id_test.rs
crates/asc_client/tests/fixtures/: bundleId_profiles_page1.json  bundleId_profiles_page2.json  bundleIds_list.json
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  dummy_cli.rs  main.rs
crates/cli/src/commands/: mod.rs
crates/cli/src/commands/ios/: bundle_id.rs  certificate.rs  login.rs  mod.rs  progress.rs  provisioning_profile.rs
crates/core_lib/: Cargo.toml
crates/core_lib/src/: lib.rs
crates/core_lib/src/ios/: mod.rs
crates/core_lib/src/ios/bundle_identifier/: errors.rs  models.rs  ports.rs  service.rs
crates/core_lib/src/ios/certificates/: errors.rs  models.rs  ports.rs  progress.rs  service.rs
crates/core_lib/src/ios/login/: models.rs  ports.rs  service.rs
crates/core_lib/src/ios/provisioning_profiles/: errors.rs  mod.rs  models.rs  ports.rs  progress.rs  service.rs
crates/core_lib/src/shared/: config.rs  errors.rs  mod.rs  models.rs  ports.rs  secret_config.rs
crates/csr/: Cargo.toml
crates/csr/src/: lib.rs
crates/sys_tools/: Cargo.toml
crates/sys_tools/src/: config_storage.rs  keychain_adapter.rs  lib.rs  provisioning_profile_local.rs  secret_config_storage.rs
tests/: integration_test.rs
