[package]
name = "asc_client"
version = "0.2.0"
edition = "2024"

[dependencies]
core_lib = { path = "../core_lib" }
base64 = "0.22.0"
jsonwebtoken = "9"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
[dev-dependencies]
tempfile = "3.10.1"
wiremock = "0.6.5"
tokio = { version = "1", features = ["full"] }
