[package]
name = "cli"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/rubiktubik/schnell"
authors = ["Michael Tissen"]

[[bin]]
name = "schnell"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
core_lib = { path = "../core_lib" }
asc_client = { path = "../asc_client" }
sys_tools = { path = "../sys_tools" }
csr = { path = "../csr" }
tokio = { version = "1", features = ["full"] }
console = "0.15"
indicatif = "0.17"

[dev-dependencies]
assert_cmd = "2.0.14"

[[test]]
name = "integration_test"
path = "../../tests/integration_test.rs"
