[package]
name = "core_lib"
version = "0.2.0"
edition = "2024"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4.38", features = ["serde"] }
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
mockall = "0.12.1"
